Fix navbar height on mobile

--- a/App/src/components/Navbar/NavBar.css
+++ b/App/src/components/Navbar/NavBar.css
@@ -59,7 +59,6 @@
     align-items: flex-end;
     background: rgba(40, 40, 40, 0.8);
     backdrop-filter: blur(3px);
-    height: 100px;
     padding-bottom: 10px;
 }
 
@@ -102,7 +101,7 @@
 @media(max-width: 576px){
 
     .menu-wrapper-open{
-        max-height: 100vh;
+        max-height: 200vh;
         transition: max-height .8s ease;
     }
 
@@ -133,6 +132,11 @@
 }
 
 @media(min-width: 576px){
+
+    .menu{
+        height: 100px;
+    }
+
     .toggle-button{
         display: none;
     }
